# codearts-boatrace-tipster

./: .dockerignore  .gitignore  CLAUDE.md  CONTINUATION_PROMPT.md  Dockerfile  README.md  biome.json  compose.yaml  package.json  tsconfig.json
archive/: runner-state-2026-04-19.json
docs/: development-guide.md
ml/: pyproject.toml
ml/models/boat1/: model.pkl  model_meta.json
ml/scripts/: _adhoc_ev_sweep_drift.py  _adhoc_rank2_analysis.py  _p2_decision.py  analyze_boat1.py  analyze_boat1_skill.py  analyze_decisions.py  analyze_ev_sensitivity.py  analyze_february_regime.py  analyze_model.py  analyze_monthly_trap.py  analyze_odds_drift.py  analyze_reliability.py  analyze_t5_t1_drift.py  analyze_trap_pattern.py  backtest_anti_favorite.py  backtest_boat1.py  backtest_trifecta.py  bench_data_size.py  bench_train.py  build_snapshot.py  build_trials_json_from_log.py  compare_full_vs_snapshot.py  compare_miss_patterns.py  compare_mixed_modes.py  conc_sweep.py  daily_anti_favorite.py  daily_p2_summary.py  daily_trifecta.py  early_stop_test.py  ensemble_score_avg.py  ensemble_sweep.py  filter_axis_scan.py  grid_rolling.py  model_stability_test.py  poc_exacta_backtest.py  poc_second_place.py  predict_boat1.py  predict_p2.py  predict_trifecta.py  promote_model.py  (+22 more)
ml/src/boatrace_tipster_ml/: boat1_features.py  boat1_model.py  db.py  evaluate.py  feature_config.py  features.py  model.py  registry.py  snapshot.py  snapshot_features.py  test_boat1_model.py  test_evaluate.py  test_feature_config.py  test_features.py  test_model.py  test_registry.py  test_snapshot.py  training.py
(+81 files in other folders)
