[project]
name = "boatrace-tipster-ml"
version = "0.0.1"
description = "ML engine for boat race prediction"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.0",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=1.26",
    "optuna>=4.0",
    "duckdb>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boatrace_tipster_ml"]
